--- a/src/components/body/banner/banner.module.css
+++ b/src/components/body/banner/banner.module.css
@@ -1,4 +1,5 @@
 #banner {
   margin-top: 0.75rem;
   margin-bottom: var(--space_md);
+  margin-left: 0.15rem;
 }
