--- a/src/components/body/body.module.css
+++ b/src/components/body/body.module.css
@@ -18,7 +18,7 @@
   grid-template-columns: 3fr 1fr;
 
   height: min-content;
-  position: var(--body_position);
+  position: var(--body_banner-nav-position);
   top: var(--space_md);
 
   & nav {
