--- a/src/components/body/navigation/navigation.module.css
+++ b/src/components/body/navigation/navigation.module.css
@@ -1,3 +1,14 @@
+nav#nav {
+  & li {
+    list-style: none;
+    margin-left: 0;
+
+    &:first-child {
+      margin-top: 0;
+    }
+  }
+}
+
 button.nav-toggle {
   display: var(--nav_toggle-display);
 }
